--- a/style.css
+++ b/style.css
@@ -7,12 +7,47 @@ body {
 header {
   display: flex;
   justify-content: center;
+  height: 120px;
 }
 
 .container {
   display: flex;
   justify-content: space-between;
   width: 990px;
-  height: 100px;
-  background-color: red;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+}
+
+nav ul,
+nav li {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+ul {
+  display: flex;
+}
+
+nav a {
+  display: block;
+  padding: 15px;
+  text-decoration: none;
+  text-transform: uppercase; /*deixa tudo maiusculo*/
+  color: #727272;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+nav .active a, /*A classe active é um nome comum para uma classe CSS que é frequentemente usada para destacar visualmente um elemento ativo em uma página da web.*/
+nav a:hover {
+  background-color: #39aae1;
+  color: white;
 }
