--- a/style.css
+++ b/style.css
@@ -51,3 +51,10 @@ nav a:hover {
   background-color: #39aae1;
   color: white;
 }
+
+#banner {
+  background-image: url("fotos/img1.jpg");
+  background-position: center;
+  background-size: cover;
+  height: 670px;
+}
