--- a/style.css
+++ b/style.css
@@ -53,8 +53,44 @@ nav a:hover {
 }
 
 #banner {
+  display: flex;
+  justify-content: center;
   background-image: url("fotos/img1.jpg");
   background-position: center;
   background-size: cover;
   height: 670px;
+}
+
+.column {
+  flex-direction: column;
+}
+
+.banner_headline {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.banner_headline h1 {
+  color: white;
+  font-size: 70px;
+  text-shadow: 0px 2px 0 #555555c2;
+  margin: 0px;
+  padding: 0px;
+  max-width: 350px;
+}
+
+.banner_headline h2 {
+  color: white;
+  font-size: 23px;
+  text-shadow: 0px 2px 0 #555555c2;
+  margin: 0px;
+  padding: 0px;
+  max-width: 350px;
+  margin-top: 30px;
+}
+
+.banner_options {
+  height: 210px;
 }
