--- a/style.css
+++ b/style.css
@@ -137,6 +137,11 @@ nav a:hover {
   font-size: 15px;
   text-decoration: none;
 }
+
+.banner_options a:hover{
+  background-color: white;
+  color: black;
+}
 /* exercicio do curso - opening hours, 
 
 coloquei o banner 3 display flex, flex-direction:column,jusstify-content:center;
