--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ nav a:hover {
 
 .banner_options a:hover {
   background-color: white;
-  color: black;
+  color: #2b4c99;
 }
 /* exercicio do curso - opening hours, 
 
