--- a/style.css
+++ b/style.css
@@ -235,3 +235,22 @@ perfeito a execução do exercicio.
   background-color: #36a9e1;
   margin-top: 10px;
 }
+
+article .news_data {
+  display: flex;
+}
+
+article .news_posted_at {
+  background-color: #2b4c99;
+  color: white;
+  font-size: 12px;
+  padding: 10px;
+  margin-right: 2px;
+}
+
+article .news_comments {
+  background-color: #39aae1;
+  color: white;
+  font-size: 12px;
+  padding: 10px;
+}
