--- a/style.css
+++ b/style.css
@@ -254,3 +254,25 @@ article .news_comments {
   font-size: 12px;
   padding: 10px;
 }
+
+article .news_thumbnail{
+  margin-top: 30px;
+}
+
+article .news_thumbnail img{
+  width: 100%;
+  height: auto;
+}
+
+article .news_title{
+  margin-top: 25px;
+  margin-bottom: 25px;
+  font-size: 23px;
+  color: black;
+}
+
+article .news_resume{
+  font-size: 14px;
+  color: #5c5c5c;
+  line-height: 20px; /*espaçamento entre as linhas dos texto*/
+}
