--- a/style.css
+++ b/style.css
@@ -411,3 +411,10 @@ footer .wigted_title_text {
 .footer_menu a {
   text-decoration: none;
 }
+
+.footer_text_final{
+  font-size: 15px;
+  margin-top: 30px;
+
+}
+
