--- a/style.css
+++ b/style.css
@@ -498,3 +498,45 @@ span {
   margin-right: 7px;
   margin-top: 0;
 }
+
+/* media query - responsividade */
+
+@media (max-width:600px) {
+
+  .logo {
+    padding-top: 20px;
+    padding-left: 20px;
+  }
+
+
+  .banner_headline {
+    padding: 20px;
+  }
+
+  .banner_headline h1 {
+    font-size: 55px;
+
+  }
+
+  .banner_headline h2 {
+    font-size: 17px;
+  }
+
+  .banner_options {
+    height: auto;
+    flex-direction: column;
+
+
+  }
+
+  .container {
+    flex-direction: column;
+  }
+
+  #geral section {
+    padding: 20px;
+    margin-top: 60px;
+
+  }
+
+}
