--- a/style.css
+++ b/style.css
@@ -500,12 +500,18 @@ span {
 }
 
 .menuMobile {
-  display:none;
-  width:40px;
-  height:40px;
-  background-color:black;
+  display: none;
+  width: 40px;
+  height: 40px;
   margin-top: 40px;
   margin-bottom: 40px;
+  margin-right: 20px;
+}
+
+.mm_line {
+  height: 3px;
+  background-color: #36a9e1;
+
 }
 
 /* media query - responsividade */
@@ -585,8 +591,10 @@ span {
 
   }
 
-  .menuMobile{
-    display: blok;
+  .menuMobile {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
   }
 
 }
